Fixed overflow problem

--- a/style.scss
+++ b/style.scss
@@ -281,6 +281,7 @@ p {
     overflow: hidden;
     margin: 12px 0;
     font-size: 1.5vw;
+    
 }
 
 #ryan-soeyadi:hover {
@@ -576,6 +577,8 @@ textarea {
         }
         .nav-bar li {
             font-size: 0.6em;
+            overflow: visible;
+
         }
 
         .event-wrapper:first-of-type {
